fix games width and game div overflow

--- a/src/app/games/games.component.css
+++ b/src/app/games/games.component.css
@@ -14,7 +14,15 @@
 }
 .game {
     top: 64px;
-    min-height: calc(100vh - 64px);
+    max-height: calc(100vh - 64px);
+    overflow: scroll;
+}
+.background {
+    height: 100vh;
+    overflow: hidden;
+}
+.game::-webkit-scrollbar {
+    display: none;
 }
 .game > * {
     position: relative;
@@ -22,10 +30,6 @@
     margin-left: 2vw;
     float: left;
     height: 20vw;
-    width: 12vw;
+    width: calc(12vw - 4px);
     cursor: pointer;
-}
-.background {
-    overflow: hidden;
-    height: 100vh;
 }
